@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.61.00
 
+              pamgauss: Fix bug: erroneously says -maxval is too big.
+              Always broken (Pamgauss was added in 10.23 (July 2004).
+
 12.09.30 BJH  Release 10.60.00
 
               xpmtoppm: major speedup for 3-character-per pixel files,
